--- a/django-web-app/litreview/app/templates/app/login.html
+++ b/django-web-app/litreview/app/templates/app/login.html
@@ -10,16 +10,12 @@
         </div>
         <div id="container" class="right">
         <!-- zone de connexion -->
-        <form action="homepage/" method="POST">
+        <form method="post">
             <h1>Connectez-vous</h1>
-
-            <label><b>Nom d'utilisateur</b></label>
-            <input type="text" placeholder="Entrer le nom d'utilisateur" name="username" required>
-
-            <label><b>Mot de passe</b></label>
-            <input type="password" placeholder="Entrer le mot de passe" name="password" required>
-
-            <input type="submit" id='submit' value='Se connecter' >
+            <p>{{ message }}</p>
+            {{ form.as_p }}
+            {% csrf_token %}
+            <button type="submit" >Se connecter</button>
 
         </form>
     </div>
