--- a/django-web-app/litreview/app/templates/app/login.html
+++ b/django-web-app/litreview/app/templates/app/login.html
@@ -5,7 +5,7 @@
     <div id="container" class="left">
         <form>
             <h1>Inscrivez-vous maintenant</h1>
-            <a href="../registration/"><span class="button">S'inscrire</span></a>
+            <p>Pas encore membre ? <a href="{% url 'signup' %}">Inscrivez-vous maintenant !</a></p>
         </form>
         </div>
         <div id="container" class="right">
