--- a/django-web-app/litreview/app/templates/app/signup.html
+++ b/django-web-app/litreview/app/templates/app/signup.html
@@ -8,4 +8,5 @@
         {% csrf_token %}
         <button type="submit" >S’inscrire</button>
     </form>
+    <p> <a href="{% url 'login' %}">retour</a></p>
 {% endblock content %}
