--- a/Litreview/base/templates/home.html
+++ b/Litreview/base/templates/home.html
@@ -5,9 +5,9 @@
                 <div id="card-top">
                     <h2>LITReview</h2>
                     <ul>
-                        <li>Flux</li>
-                        <li>Posts</li>
-                        <li>Abonnements</li>
+                        <li><a href="#">Flux</a></li>
+                        <li><a href="#">Posts</a></li>
+                        <li><a href="#">Abonnements</a></li>
                     </ul>
                     <p class="user"><b>{{ request.user }} </b></b><a href="{% url 'logout' %}">Se déconnecter</a></p>
                 </div>
