--- a/Litreview/base/static/styles.css
+++ b/Litreview/base/static/styles.css
@@ -33,13 +33,16 @@ body{
 
 }
 #card-top{
-    width:100%;
-    padding: 20px;
+    width:80%;
+
     border: 1px solid #f1f1f1;
     background: #fff;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     border-radius: 20px;
-
+    display: flex;
+    justify-content: space-between;
+    align-items:  center;
+    padding: 30px 10%;
 
 }
 #card-top .user{
@@ -133,9 +136,16 @@ li ,a {
     text-decoration: none;
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items:  center;
-    padding: 30px 10%;
+.nav_links{
+    list-style: none;
 }
+.nav_links li{
+    display: inline-block;
+    padding: 0px 20px;
+}
+.nav_links li a{
+    transition: all 0.3 ease 0s;
+}
+.nav_links li a:hover{
+    color: #0088a9
+   }
