--- a/Litreview/base/templates/home.html
+++ b/Litreview/base/templates/home.html
@@ -4,7 +4,7 @@
             <div id="cont-home">
                 <div id="card-top">
                     <h2>LITReview</h2>
-                    <ul>
+                    <ul class="nav_links">
                         <li><a href="#">Flux</a></li>
                         <li><a href="#">Posts</a></li>
                         <li><a href="#">Abonnements</a></li>
