--- a/Litreview/base/templates/home.html
+++ b/Litreview/base/templates/home.html
@@ -1,6 +1,7 @@
-
 {% extends 'header.html' %}
 {% block content %}
-
-
+ <div id="cont-home">
+    <button>Demander une critique</button>
+     <button>Créer une critique</button>
+ </div>
 {% endblock content %}
