--- a/Litreview/base/templates/base.html
+++ b/Litreview/base/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'styles.css' %}" />
 </head>
 <body>
+{% block header %}{% endblock %}
 {% block content %}{% endblock %}
 </body>
 </html>
