--- a/Litreview/base/static/styles.css
+++ b/Litreview/base/static/styles.css
@@ -43,6 +43,7 @@ body{
     background-color: #838FC0;
     border: 1px;
     border-radius: 10px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     cursor: pointer;
     transition: all 0.3s ease 0s;
     color: #FFF;
