--- a/Litreview/base/templates/header.html
+++ b/Litreview/base/templates/header.html
@@ -6,11 +6,11 @@
         <div id="card-top">
             <h2>LITReview</h2>
             <ul class="nav_links">
-                <li><a href="#">Flux</a></li>
-                <li><a href="#">Posts</a></li>
-                <li><a href="#">Abonnements</a></li>
+                <li><a href="{% url 'home' %}">Flux</a></li>
+                <li><a href="{% url 'posts' %}">Posts</a></li>
+                <li><a href="{% url 'subscription' %}">Abonnements</a></li>
             </ul>
-            <p class="user"><b>{{ request.user }} </b></b><a href="{% url 'logout' %}"><button>Se déconnecter</button></a></p>
+            <p class="user"><a href="{% url 'logout' %}"><button>Se déconnecter</button></a></p>
         </div>
     </div>
 {% endif %}
