--- a/Litreview/base/static/styles.css
+++ b/Litreview/base/static/styles.css
@@ -26,6 +26,7 @@ body{
     padding-bottom: 5px;
     padding-top: 5px;
     margin-bottom: 20px;
+    padding-left: 20px;
 }
 #container{
     width:45%;
@@ -51,6 +52,8 @@ body{
     margin-bottom: 20px;
     margin-top: 20px;
     border-radius: 20px;
+    background-color: #fff;
+    padding-left: 20px;
 
 }
 .ticket img{
