--- a/Litreview/base/static/styles.css
+++ b/Litreview/base/static/styles.css
@@ -54,6 +54,7 @@ body{
     border-radius: 20px;
     background-color: #fff;
     padding-left: 20px;
+    padding-bottom: 20px;
 
 }
 .ticket img{
@@ -61,6 +62,33 @@ body{
   height: 50%;
   margin-left: 20px;
 }
+.ticket a{
+    position: relative;
+    padding: 9px 25px;
+    background-color: #838FC0;
+    border: 1px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: #FFF;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.ticket a:hover{
+
+    padding: 9px 25px;
+    background-color: #838FC0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: #FFF;
+    opacity: 0.7;
+}
+
+
 #cont-home{
     margin: 3%;
     width:80%;
