--- a/Litreview/base/templates/subscription.html
+++ b/Litreview/base/templates/subscription.html
@@ -1,5 +1,6 @@
 {% extends 'header.html' %}
 {% block content %}
+<div id="cont-flux">
     <h2></h2>
     <form method="post" enctype="multipart/form-data">
         <h3>Suivre les utilisateurs </h3>
@@ -19,5 +20,5 @@
             <p>{{ abonne.user }}</p>
         {% endfor %}
 
-
+</div>
 {% endblock content %}
