--- a/Litreview/base/static/styles.css
+++ b/Litreview/base/static/styles.css
@@ -62,7 +62,7 @@ body{
   height: 50%;
   margin-left: 20px;
 }
-.ticket a{
+#cont-flux form a{
     position: relative;
     padding: 9px 25px;
     background-color: #838FC0;
@@ -75,8 +75,112 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+#cont-flux form button{
 
-.ticket a:hover{
+    position: relative;
+    padding: 9px 25px;
+    background-color: #838FC0;
+    border: 1px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: #FFF;
+    margin-left: 30px;
+    margin-right: auto;
+
+
+
+
+}
+#cont-flux form{
+
+    width:100%;
+    padding: none;
+    border: none;
+    background: none;
+    box-shadow: none;
+    border-radius: none;
+    font-family: 'Rajdhani', sans-serif;
+    box-sizing: border-box;
+
+}
+#cont-flux form button:hover{
+    padding: 9px 25px;
+    background-color: #838FC0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: #FFF;
+    opacity: 0.7;
+}
+#cont-flux form a:hover{
+
+    padding: 9px 25px;
+    background-color: #838FC0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: #FFF;
+    opacity: 0.7;
+}
+
+.ticket form a{
+    position: relative;
+    padding: 9px 25px;
+    background-color: #838FC0;
+    border: 1px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: #FFF;
+    margin-left: auto;
+    margin-right: auto;
+}
+.ticket form button{
+
+    position: relative;
+    padding: 9px 25px;
+    background-color: #838FC0;
+    border: 1px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: #FFF;
+    margin-left: 30px;
+    margin-right: auto;
+
+
+
+
+}
+.ticket form{
+
+    width:100%;
+    padding: none;
+    border: none;
+    background: none;
+    box-shadow: none;
+    border-radius: none;
+    font-family: 'Rajdhani', sans-serif;
+    box-sizing: border-box;
+
+}
+.ticket form button:hover{
+    padding: 9px 25px;
+    background-color: #838FC0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: #FFF;
+    opacity: 0.7;
+}
+.ticket form a:hover{
 
     padding: 9px 25px;
     background-color: #838FC0;
