--- a/Litreview/base/static/styles.css
+++ b/Litreview/base/static/styles.css
@@ -140,6 +140,19 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+.ticket a{
+    position: relative;
+    padding: 9px 25px;
+    background-color: #838FC0;
+    border: 1px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: #FFF;
+    margin-left: auto;
+    margin-right: auto;
+}
 .ticket form button{
 
     position: relative;
@@ -191,7 +204,17 @@ body{
     color: #FFF;
     opacity: 0.7;
 }
+.ticket a:hover{
 
+    padding: 9px 25px;
+    background-color: #838FC0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: #FFF;
+    opacity: 0.7;
+}
 
 #cont-home{
     margin: 3%;
