--- a/Litreview/base/templates/subscription.html
+++ b/Litreview/base/templates/subscription.html
@@ -1,5 +1,7 @@
 {% extends 'header.html' %}
 {% block content %}
+<div id="cont-home">
+</div>
 <div id="cont-flux">
     <h2></h2>
     <form method="post" enctype="multipart/form-data">
