--- a/Litreview/base/templates/includes/rating.html
+++ b/Litreview/base/templates/includes/rating.html
@@ -1,3 +1,11 @@
-<div>
-    {{ test }}
-</div>
+{% if test == 1 %}
+★☆☆☆☆
+{% elif test == 2 %}
+★★☆☆☆
+{% elif test == 3 %}
+★★★☆☆
+{% elif test == 4 %}
+★★★★☆
+{% else %}
+★★★★★
+{% endif %}
