--- a/Litreview/base/templates/base.html
+++ b/Litreview/base/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>LITReview</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}" />
+    <link rel="icon" type="image/x-icon" href="{% static '16004297044411_P7.png' %}">
 </head>
 <body>
 {% block header %}{% endblock %}
